--- a/requirements.txt
+++ b/requirements.txt
@@ -44,8 +44,11 @@ packaging==20.9
 pandas==1.1.5
 pandocfilters==1.4.3
 parso==0.8.2
+patsy==0.5.1
 pickleshare==0.7.5
 Pillow==8.2.0
+plotly==5.0.0
+plotly-express==0.4.1
 prometheus-client==0.11.0
 prompt-toolkit==3.0.19
 protobuf==3.17.3
@@ -61,10 +64,13 @@ pywin32==301
 pywinpty==1.1.2
 pyzmq==22.1.0
 requests==2.25.1
+scipy==1.7.0
 Send2Trash==1.7.1
 six==1.16.0
 smmap==4.0.0
+statsmodels==0.12.2
 streamlit==0.83.0
+tenacity==7.0.0
 terminado==0.10.1
 testpath==0.5.0
 toml==0.10.2
