--- a/requirements.txt
+++ b/requirements.txt
@@ -57,6 +57,7 @@ pycparser==2.20
 pydeck==0.6.2
 Pygments==2.9.0
 pyparsing==2.4.7
+pypiwin32==223
 pyrsistent==0.17.3
 python-dateutil==2.8.1
 pytz==2021.1
